Completed First step in JS for viewing uploaded img

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         </label>
       </section>
       <section class="file-list">
-        <div class="img-view">
+        <!-- <div class="img-view">
           <div class="img-holder">
             <img src="default.png" alt="test" class="image" />
           </div>
           <input type="text" class="description" placeholder="Description" />
           <img src="check-mark.png" alt="ok" class="accept" />
           <img src="cancel.png" alt="no" class="reject" />
-        </div>
+        </div> -->
       </section>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
